# deepcausalmmm

./: .gitignore  .readthedocs.yaml  5.0.0  CHANGELOG.md  CITATION.cff  CITATION_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST_1.0.17.md  RELEASE_NOTES_1.0.17.md  RELEASE_NOTES_1.0.19.md  RELEASE_NOTES_1.0.20.md  RELEASE_NOTES_1.0.21.md  STRUCTURE.md  __init__.py  __init___.py  causal_gru_mmm.py  cli.py  dashboard_rmse_optimized.py  fixed_breakdown.py  pyproject.toml  quick_breakdown_analysis.py  quick_version_test.py  run_complete_analysis.py  run_complete_breakdown_analysis.py  run_real_data_analysis.py  run_real_data_analysis_fixed.py  sample_marketing_data.csv  setup.py  simple_breakdown.py  simple_test.py  test_complete_pipeline.py  test_counterfactual_attribution.py  test_data.csv  test_linear_scaling_100epochs.py  test_linear_scaling_output.txt  test_linear_scaling_output_v2.txt  (+6 more)
.github/workflows/: draft-pdf.yml  python-package.yml  test.yml
JOSS/: paper.bib  paper.md
Project Documentation/: CHANGELOG.md  CODE_OF_CONDUCT.md
analysis_output/: results_summary.json
coefficient_analysis/: coefficient_data.csv
core/: __init__.py  data.py  inference.py  scaling.py  scaling.py.backup  seasonality.py  train_model.py  trainer.py  unified_model.py  visualization.py
deepcausalmmm/: __init__.py  _version.py  cli.py  config.py  version.py
deepcausalmmm/core/: __init__.py  config.py  data.py  infer.py  inference.py  model.py  scaling.py  train.py  train_model.py  trainer.py  unified_model.py
deepcausalmmm/postprocess/: __init__.py  analysis.py  comprehensive_analysis.py  optimization.py  optimization_utils.py  response_curves.py
deepcausalmmm/utils/: __init__.py  metrics.py  postprocess.py  validation.py
docs/: requirements.txt
docs/source/: conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: analysis.rst  cli.rst  core.rst  data.rst  exceptions.rst  index.rst  inference.rst  optimization.rst  response_curves.rst  trainer.rst  utils.rst  visualization.rst
docs/source/examples/: index.rst  multi_region.rst  retail_mmm.rst
docs/source/tutorials/: basic_mmm_workflow.rst  dag_notears.rst  index.rst
examples/: dashboard_FIXED_attribution.py  dashboard_TEST_FINAL.txt  dashboard_linear_scaling.py  dashboard_rmse_optimized.py  dashboard_with_counterfactual.py  debug_transformations.py  example_budget_optimization.py  example_response_curves.py  master_dashboard.html  meridian_mmm_example.ipynb  mmm_three_way_benchmark.ipynb  pymc_aligned_dcm_config.json  pymc_marketing_mmm_pooled_dma.ipynb  quickstart.ipynb  robyn_mmm_example.ipynb  simple_run.py
examples/dashboard_beautiful_comprehensive/: master_dashboard.html
examples/data/: MMM Data.csv
postprocess/: __init__.py  analysis.py  comprehensive_analysis.py
real_data_analysis/: results_summary.json
release_notes/: 1.0.21.md  README.md
release_notes/archive/: 1.0.17.md  1.0.18.md  1.0.20.md
tests/: __init__.py  test_model.py
tests/integration/: __init__.py  test_dashboard_rmse_optimized.py  test_end_to_end.py  test_mlflow_integration.py
tests/unit/: __init__.py  test_config.py  test_dag_adjacency_rigorous.py  test_drift.py  test_inference.py  test_model.py  test_notears.py  test_scaling.py
utils/: __init__.py  data_generator.py
