# pyproject.toml — deepcausalmmm
# ----------------------------------------------------------
# Build:   python -m build
# TestPyPI: twine upload --repository testpypi dist/*
# ----------------------------------------------------------

[build-system]
requires      = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

# ------------  Project metadata  --------------------------
[project]
name            = "deepcausalmmm"
version         = "1.0.0"
description     = "Causal deep-learning marketing-mix modeling library"
readme          = "README.md"
requires-python = ">=3.9"
license         = { text = "MIT" }

authors = [
  { name = "Aditya Puttaparthi Tirumala", email = "adityapu@users.noreply.github.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

# ------------  Runtime dependencies  ----------------------
dependencies = [
  "torch>=2.2",
  "pandas>=2.0",
  "numpy>=2.0",
  "plotly>=6.0",
  "networkx>=3.0",
  "scikit-learn>=1.4",
  "statsmodels>=0.14",
  "tqdm>=4.60",
]

[project.optional-dependencies]
dev  = ["pytest>=8", "pytest-cov", "black", "ruff", "pre-commit"]
docs = ["sphinx>=7", "sphinx-rtd-theme", "sphinx-autodoc-typehints", "myst-parser"]

# ------------  Setuptools config  -------------------------
[tool.setuptools]
package-dir          = { "" = "." }        # change to {"" = "src"} if you move to src/
packages             = ["find:"]
include-package-data = true                # include files from MANIFEST.in

[tool.setuptools.packages.find]
where    = ["."]
include  = ["deepcausalmmm*"]
exclude  = ["tests*"]
